Bug 99233. Increase the pipe's segment size so that commands don't get split up over multiple packets, which should fix some broken servers/firewalls.  r=timeless, r/sr=dougt